build(Makefile): Refactor to compile into lib
- Add Socket test target `test_socket` that links the library
 with SOCKET_main.cpp

--- a/ver-01.1/Makefile
+++ b/ver-01.1/Makefile
@@ -1,45 +1,51 @@
 CXX:= c++
-CXXFLAGS:= -Wall -Werror -Wextra -std=c++98
+CXXFLAGS:= -Wall -Werror -Wextra -std=c++98 
+DEBUGFLAGS:= -ggdb3 -fsanitize=address -D__DEBUG__
 
 RM:= rm -rf
 
 INCLUDES:= -I./includes
 
-SRCS_DIR:= srcs/
-SRCS:= Server.cpp
+SRCS_DIR:= srcs
+SRCS:= Socket.cpp Server.cpp 
+
+# tester mains
+TEST_SOCK:= $(SRCS_DIR)/SOCKET_main.cpp
 
 OBJS_DIR:= objs
 OBJS:= $(SRCS:%.cpp=$(OBJS_DIR)/%.o)
 
-NAME:= webserv
+NAME:= libwebserv.a
 
 all: $(NAME)
 
 run: re
 	./$(NAME)
 
-ndebug: CXXFLAGS += -DNDEBUG
-ndebug: run
+debug: CXXFLAGS += $(DEBUGFLAGS)
+debug: all
 
-debug: CXXFLAGS += -DDEBUG -ggdb3
-debug: run
+$(NAME): $(OBJS) 
+	ar rcs $(NAME) $(OBJS)
 
-$(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ $^
-
-$(OBJS_DIR)/%.o: $(SRCS_DIR)%.cpp | $(OBJS_DIR)
+$(OBJS_DIR)/%.o: $(SRCS_DIR)/%.cpp | $(OBJS_DIR)
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $^ -o $@
 
 $(OBJS_DIR):
 	@mkdir -p objs
+
+# tests
+test_socket: $(TEST_SOCK) debug 
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -fsanitize=address $(TEST_SOCK) $(NAME) -o $@
 
 clean:
 	$(RM) $(OBJS_DIR)
 
 fclean: clean
 	$(RM) $(NAME)
+	$(RM) test_socket
 
 re: fclean all
 
-.PHONY: clean fclean all re
+.PHONY: clean fclean all re test_socket
 
