chore(Makefile): Now uses c++11 and links with
- this is only done for the wait in start function remove later

--- a/ver-01.1/Makefile
+++ b/ver-01.1/Makefile
@@ -1,5 +1,5 @@
 CXX:= c++
-CXXFLAGS:= -Wall -Werror -Wextra -std=c++98
+CXXFLAGS:= -Wall -Werror -Wextra -std=c++11 -lpthread
 DEBUGFLAGS:= -ggdb3 -fsanitize=address -D__DEBUG__
 
 ifeq ($(shell uname), Linux)
