--- a/.github/workflows/compile-check.yml
+++ b/.github/workflows/compile-check.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on:
+      - ubuntu-latest
+      - macos-10.15
 
     steps:
     - name: Checkout repository
