--- a/parser/Makefile
+++ b/parser/Makefile
@@ -8,7 +8,7 @@ RESET:= \033[0m
 
 CXX:= c++
 CXXFLAGS:= -Wall -Werror -Wextra -std=c++98 -MMD -MP
-DEBUGFLAGS:= -ggdb3 -fsanitize=address -D__DEBUG__
+DEBUGFLAGS:= -ggdb3 -D__DEBUG__
 
 ifeq ($(shell uname), Linux)
 	CXXFLAGS += -D__LINUX__
@@ -52,8 +52,16 @@ debug: CXXFLAGS += $(DEBUGFLAGS)
 debug: all
 	@echo "$(MAGENTA)[ DEBUG ]$(RESET) $(NAME) is ready for debugging."
 
+sanitize: CXXFLAGS += $(DEBUGFLAGS) -fsanitize=address
+sanitize: all
+	@echo "$(MAGENTA)[ DEBUG ]$(RESET) $(NAME) is ready for debugging with sanitizer."
+
+valgrind: debug
+	@valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose ./test_parser $(CONFIG_FILES)
+	@echo "$(MAGENTA)[ LEAKS ]$(RESET) Checking $(NAME) for leaks."
+
 test_parser: $(TEST_PARSER) debug
-	@$(CXX) $(CXXFLAGS) $(INCLUDES) -fsanitize=address $(TEST_PARSER) $(NAME) -o $@
+	@$(CXX) $(CXXFLAGS) $(INCLUDES) $(TEST_PARSER) $(NAME) -o $@
 	@mv *.d objects/
 	@echo "$(BLUE)[ TEST ]$(RESET) Parser is now ready for testing."
 	@echo "$(BLUE)[ TEST ]$(RESET) Running ./$@.\n"
