--- a/server/Makefile
+++ b/server/Makefile
@@ -8,7 +8,7 @@ RESET:= \033[0m
 
 CXX:= c++
 CXXFLAGS:= -Wall -Werror -Wextra -std=c++98 -MMD -MP
-DEBUGFLAGS:= -ggdb3 -fsanitize=address -D__DEBUG__
+DEBUGFLAGS:= -ggdb3 -D__DEBUG__
 
 ifeq ($(shell uname), Linux)
 	CXXFLAGS += -D__LINUX__
@@ -51,6 +51,14 @@ debug: CXXFLAGS += $(DEBUGFLAGS)
 debug: all
 	@echo "$(MAGENTA)[ DEBUG ]$(RESET) $(NAME) is ready for debugging."
 
+sanitize: CXXFLAGS += $(DEBUGFLAGS) -fsanitize=address
+sanitize: all
+	@echo "$(MAGENTA)[ DEBUG ]$(RESET) $(NAME) is ready for debugging with sanitizer."
+
+valgrind: debug
+	@valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose ./test_parser $(CONFIG_FILES)
+	@echo "$(MAGENTA)[ LEAKS ]$(RESET) Checking $(NAME) for leaks."
+
 # tests
 client: debug
 	@$(CXX) $(CXXFLAGS) $(INCLUDES) $(TEST_DIR)/ClientTest.cpp $(NAME) -o $@
@@ -58,12 +66,12 @@ client: debug
 	@echo "$(BLUE)[ TEST ]$(RESET) Client ready."
 
 test_socket: $(TEST_SOCKET) client
-	@$(CXX) $(CXXFLAGS) $(INCLUDES) -fsanitize=address $(TEST_SOCKET) $(NAME) -o $@
+	@$(CXX) $(CXXFLAGS) $(INCLUDES) $(TEST_SOCKET) $(NAME) -o $@
 	@mv *.d objects/
 	@echo "$(BLUE)[ TEST ]$(RESET) Socket is now ready for testing."
 
 test_server: $(TEST_SOCKET) client
-	@$(CXX) $(CXXFLAGS) $(INCLUDES) -fsanitize=address $(TEST_SERVER) $(NAME) -o $@
+	@$(CXX) $(CXXFLAGS) $(INCLUDES) $(TEST_SERVER) $(NAME) -o $@
 	@mv *.d objects/
 	@echo "$(BLUE)[ TEST ]$(RESET) Server is now ready for testing."
 
