chore(ConfigParser): moved json files into json/

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -32,7 +32,8 @@ TEST_PARSER:= $(TEST_DIR)/test_parser.cpp
 
 DEP:= $(OBJS:%.o=%.d)
 
-CONFIG_FILES:= config_sample.json simple.json
+CONFIG_DIR:= json
+CONFIG_FILES:= $(CONFIG_DIR)/config_sample.json $(CONFIG_DIR)/simple.json
 
 NAME:= libparser.a
 
