--- a/CGI/Makefile
+++ b/CGI/Makefile
@@ -6,22 +6,23 @@
 #    By: hmohamed <hmohamed@student.42abudhabi.ae>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/23 12:40:53 by hmohamed          #+#    #+#              #
-#    Updated: 2024/03/04 12:07:18 by hmohamed         ###   ########.fr        #
+#    Updated: 2024/03/06 15:18:29 by hmohamed         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = temp
+INCLUDES:= -I./ -I../includes/ -Irequest/ -Iresponse/
 SRC = tester/main.cpp    	    \
 		CGI_handler/Cgi.cpp
 
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 
 all: $(NAME)
 
 $(NAME) : $(OBJ)
-	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME) 
+	$(CXX) $(CXXFLAGS) $(INCLUDES) $(OBJ) -o $(NAME) 
 
 clean:
 		rm -f $(OBJ)
