--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .vscode/
 */objects/
 */.cache/
-*/.compile_commands.json
-.compile_commands.json
+*/compile_commands.json
+compile_commands.json
 .cache/
 *.o
 libserver.a
